feat(showcase): prepare snippets

--- a/showcase-frontend/src/app/app.component.html
+++ b/showcase-frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-navigation></app-navigation>
-<div class="col-md-12 text-center">
+<div class="container-fluid">
+  <div class="row">
+    <!-- TODO: add players here -->
+  </div>
 </div>
