--- a/showcase-frontend/src/app/nav/nav.component.html
+++ b/showcase-frontend/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="height: 100px">
   <div class="container">
-    <img src="assets/real_logo.png" style="max-width: 70px; max-height: 70px; margin-right: 15px"/>
-    <a class="navbar-brand" href="#" style="font-size: 30px">Real Madrid <small><i>players</i></small></a>
+    <img src="assets/real_logo.png" class="logo"/>
+    <a class="navbar-brand" href="#">Real Madrid <small><i>players</i></small></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
