feat(showcase): frontend - integrate backend

--- a/showcase-frontend/src/app/app.component.html
+++ b/showcase-frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navigation></app-navigation>
 <div class="container-fluid">
-  <!-- TODO: add players here -->
+  <app-players></app-players>
 </div>
